syntax = "proto3";

package com.jraft;

//import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// Message definitions

message Term {
  int32 term = 1;
  google.protobuf.Timestamp created_at=2;
}

message LogEntry {
  Term term = 1;
  MessageContent message = 2;
}

message VoteRequest {
  int32 logLength = 1;
  Term lastTerm = 2;
}

message VoteResponse {
  bool granted = 1;
}

message LogRequest {
  int32 prefixLength = 1;
  Term prefixTerm = 2;
  int32 leaderCommit = 3;
  repeated LogEntry suffix = 4;
  string leaderId = 5;
}

message LogResponse {
  int32 ack = 1;
  bool granted = 2;
}

message MessageWrapper {
  string sender = 1;
  Term term = 2;
  oneof payload {
    VoteRequest voteRequest = 3;
    VoteResponse voteResponse = 4;
    LogRequest logRequest = 5;
    LogResponse logResponse = 6;
  }
}

message MessageContent {
  string sender = 1;
  Term term = 2;
  oneof payload {
    VoteRequest voteRequest = 3;
    VoteResponse voteResponse = 4;
    LogRequest logRequest = 5;
    LogResponse logResponse = 6;
  }
}

// Service definition
service MessageHandlerService {
  rpc handleVoteRequest(MessageWrapper) returns (MessageWrapper);
  rpc handleLogRequest(MessageWrapper) returns (MessageWrapper);
}


